refactor: remove dead code, unify IDiaryService API, and fix review issues (#15)
- Remove unused analytics modules, photo controllers, and gradient components
- Unify IDiaryService API to Result-only pattern (remove legacy exception-throwing methods)
- Add mounted checks after async gaps in StatefulWidgets
- Localize hardcoded fallback tag strings via i18n
- Add Result assertion checks in integration tests
- Fix Semantics button attribute for non-tappable settings rows
- Suppress use_null_aware_elements lint for build_runner compatibility

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -859,8 +859,8 @@
   "@diaryPreviewSaveSuccess": {
     "description": "Snack bar message shown after a diary is saved successfully"
   },
-  "diaryPreviewAutoSaveError": "We couldn't save the diary.\\nPlease try again later.",
-  "@diaryPreviewAutoSaveError": {
+  "diaryPreviewSaveError": "We couldn't save the diary.\\nPlease try again later.",
+  "@diaryPreviewSaveError": {
     "description": "Error message shown when diary saving fails"
   },
   "diaryPreviewDateLabel": "Diary date",
@@ -1422,5 +1422,21 @@
   "shareCreatedWith": "Created with #SmartPhotoDiary",
   "@shareCreatedWith": {
     "description": "Credit text used when sharing"
+  },
+  "tagMorning": "Morning",
+  "@tagMorning": {
+    "description": "Fallback tag: morning time period"
+  },
+  "tagAfternoon": "Afternoon",
+  "@tagAfternoon": {
+    "description": "Fallback tag: afternoon time period"
+  },
+  "tagEvening": "Evening",
+  "@tagEvening": {
+    "description": "Fallback tag: evening time period"
+  },
+  "tagNight": "Night",
+  "@tagNight": {
+    "description": "Fallback tag: night time period"
   }
 }
