--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -859,8 +859,8 @@
   "@diaryPreviewSaveSuccess": {
     "description": "日記保存成功時のスナックバー表示"
   },
-  "diaryPreviewAutoSaveError": "日記の保存に失敗しました。\\n時間を空けてもう一度お試しください。",
-  "@diaryPreviewAutoSaveError": {
+  "diaryPreviewSaveError": "日記の保存に失敗しました。\\n時間を空けてもう一度お試しください。",
+  "@diaryPreviewSaveError": {
     "description": "日記保存に失敗した際に表示するエラーメッセージ"
   },
   "diaryPreviewDateLabel": "日記の日付",
@@ -1422,5 +1422,21 @@
   "shareCreatedWith": "#SmartPhotoDiary で生成",
   "@shareCreatedWith": {
     "description": "共有時に使用するクレジットテキスト"
+  },
+  "tagMorning": "朝",
+  "@tagMorning": {
+    "description": "フォールバックタグ: 朝の時間帯"
+  },
+  "tagAfternoon": "昼",
+  "@tagAfternoon": {
+    "description": "フォールバックタグ: 昼の時間帯"
+  },
+  "tagEvening": "夕方",
+  "@tagEvening": {
+    "description": "フォールバックタグ: 夕方の時間帯"
+  },
+  "tagNight": "夜",
+  "@tagNight": {
+    "description": "フォールバックタグ: 夜の時間帯"
   }
 }
