--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1531,5 +1531,21 @@
   "settingsDiaryLengthDialogTitle": "Default diary length",
   "@settingsDiaryLengthDialogTitle": {
     "description": "Title for the default diary length selection dialog in settings"
+  },
+  "promptContextToggle": "Add context",
+  "@promptContextToggle": {
+    "description": "Toggle button text to expand the context input field"
+  },
+  "promptContextInputLabel": "Context (optional)",
+  "@promptContextInputLabel": {
+    "description": "Label for the context text input in prompt selection modal"
+  },
+  "promptContextInputHint": "e.g. Cherry blossom viewing with friends",
+  "@promptContextInputHint": {
+    "description": "Hint for the context text input"
+  },
+  "promptContextInputHelper": "Helps the AI understand the situation beyond the photo",
+  "@promptContextInputHelper": {
+    "description": "Helper text for the context text input"
   }
 }
