--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -408,10 +408,6 @@
       }
     }
   },
-  "settingsSubscriptionUsageLabel": "AI生成使用量",
-  "@settingsSubscriptionUsageLabel": {
-    "description": "AI利用量のラベル"
-  },
   "settingsSubscriptionRemainingLabel": "残り回数",
   "@settingsSubscriptionRemainingLabel": {
     "description": "残り利用回数のラベル"
@@ -424,7 +420,7 @@
   "@settingsSubscriptionExpiryLabel": {
     "description": "サブスクリプションの有効期限ラベル"
   },
-  "settingsUpgradeToPremium": "Premiumにアップグレード",
+  "settingsUpgradeToPremium": "Premiumを解放",
   "@settingsUpgradeToPremium": {
     "description": "Premiumプランへアップグレードするボタン文言"
   },
@@ -598,9 +594,14 @@
   "@settingsPremiumYearlyTitle": {
     "description": "年額プレミアムプランのラベル"
   },
-  "settingsPremiumPlanFeatures": "月100回のAI日記生成、過去1年の写真、全20種類のライティングプロンプトが利用できます。",
+  "settingsPremiumPlanFeatures": "月{limit}件の日記作成、過去1年の写真、全ライティングスタイルが利用できます。",
   "@settingsPremiumPlanFeatures": {
-    "description": "プレミアムプランの特典説明"
+    "description": "プレミアムプランの特典説明",
+    "placeholders": {
+      "limit": {
+        "type": "int"
+      }
+    }
   },
   "settingsSubscriptionAutoRenewTitle": "自動更新について",
   "@settingsSubscriptionAutoRenewTitle": {
@@ -622,7 +623,7 @@
   "@urlLauncherOpenFailed": {
     "description": "リンクが開けなかった際のメッセージ"
   },
-  "upgradeDialogTitle": "Premiumプラン",
+  "upgradeDialogTitle": "もっと思い出を振り返ろう。",
   "@upgradeDialogTitle": {
     "description": "Premiumアップグレードダイアログのタイトル"
   },
@@ -667,7 +668,7 @@
   "@errorSeverityCritical": {
     "description": "重大レベルのエラー種別ラベル"
   },
-  "commonUpgrade": "アップグレード",
+  "commonUpgrade": "解放",
   "@commonUpgrade": {
     "description": "アップグレードボタン共通文言"
   },
@@ -675,17 +676,14 @@
   "@commonErrorTitle": {
     "description": "汎用的なエラーダイアログのタイトル"
   },
-  "usageLimitDialogTitle": "AI生成の制限に達しました",
+  "usageLimitDialogTitle": "今月の上限に達しました。",
   "@usageLimitDialogTitle": {
-    "description": "AI利用上限に達した際のダイアログタイトル"
+    "description": "今月の日記上限に達した際のダイアログタイトル"
   },
-  "usageLimitDialogReachedMessage": "{planName}プランの月間{limit}回の制限に達しました。",
-  "@usageLimitDialogReachedMessage": {
-    "description": "プランの上限に達したことを説明する本文",
+  "usageLimitDialogBody": "もっと書きたいですか？Premiumを解放すると月{limit}件の日記作成と過去1年の写真が利用できます。",
+  "@usageLimitDialogBody": {
+    "description": "制限到達時のアップグレード誘導本文",
     "placeholders": {
-      "planName": {
-        "type": "String"
-      },
       "limit": {
         "type": "int"
       }
@@ -704,18 +702,9 @@
       }
     }
   },
-  "usageLimitDialogPremiumHint": "Premiumプランなら月間{limit}回まで利用できます",
-  "@usageLimitDialogPremiumHint": {
-    "description": "Premiumプランへのアップグレードを促す一文",
-    "placeholders": {
-      "limit": {
-        "type": "int"
-      }
-    }
-  },
-  "usageStatusDialogTitle": "AI生成の使用状況",
+  "usageStatusDialogTitle": "現在のプラン",
   "@usageStatusDialogTitle": {
-    "description": "AI使用状況ダイアログのタイトル"
+    "description": "使用状況ダイアログのタイトル"
   },
   "usageStatusCurrentPlan": "現在のプラン: {planName}",
   "@usageStatusCurrentPlan": {
@@ -726,11 +715,41 @@
       }
     }
   },
+  "currentPlanStoriesLabel": "今月: {limit}件の日記",
+  "@currentPlanStoriesLabel": {
+    "description": "月間日記制限の表示",
+    "placeholders": {
+      "limit": {
+        "type": "int"
+      }
+    }
+  },
+  "currentPlanPhotosLabel": "利用可能な写真",
+  "@currentPlanPhotosLabel": {
+    "description": "写真アクセス範囲のラベル"
+  },
+  "currentPlanPhotosBasicValue": "今日と昨日",
+  "@currentPlanPhotosBasicValue": {
+    "description": "Basicプランの写真アクセス範囲"
+  },
+  "currentPlanPhotosPremiumValue": "過去1年",
+  "@currentPlanPhotosPremiumValue": {
+    "description": "Premiumプランの写真アクセス範囲"
+  },
+  "currentPlanPremiumPitch": "過去1年の思い出を振り返ろう。毎月{limit}件の日記を作成できます。",
+  "@currentPlanPremiumPitch": {
+    "description": "現在のプランダイアログでのPremium訴求文",
+    "placeholders": {
+      "limit": {
+        "type": "int"
+      }
+    }
+  },
   "usageStatusUsageLabel": "使用量",
   "@usageStatusUsageLabel": {
     "description": "使用量セクションのラベル"
   },
-  "usageStatusUsageValue": "{used} / {limit}回",
+  "usageStatusUsageValue": "{used} / {limit}件",
   "@usageStatusUsageValue": {
     "description": "使用済み回数と上限回数を表示する文",
     "placeholders": {
@@ -746,7 +765,7 @@
   "@usageStatusRemainingLabel": {
     "description": "残り回数セクションのラベル"
   },
-  "usageStatusRemainingValue": "{remaining}回",
+  "usageStatusRemainingValue": "{remaining}件",
   "@usageStatusRemainingValue": {
     "description": "残り回数を表示する文",
     "placeholders": {
@@ -764,7 +783,7 @@
       }
     }
   },
-  "usageStatusPremiumUpsell": "Premiumプランなら月間{limit}回まで利用可能です",
+  "usageStatusPremiumUpsell": "Premiumプランなら月{limit}件の日記を作成できます",
   "@usageStatusPremiumUpsell": {
     "description": "Premiumプランの利用回数を案内する文",
     "placeholders": {
@@ -931,13 +950,13 @@
   "@diaryPreviewSaveButton": {
     "description": "日記プレビュー画面の保存ボタンラベル"
   },
-  "diaryPreviewUsageLimitTitle": "AI生成の制限に達しました",
+  "diaryPreviewUsageLimitTitle": "日記の上限に達しました",
   "@diaryPreviewUsageLimitTitle": {
-    "description": "AI月間制限到達時のフォールバックダイアログタイトル"
+    "description": "月間生成制限到達時のフォールバックダイアログタイトル"
   },
-  "diaryPreviewUsageLimitMessage": "AI生成の月間制限に達したため、次回のリセットまで新しい日記を生成できません。",
+  "diaryPreviewUsageLimitMessage": "今月の上限に達しました。次回のリセットまでお待ちいただくか、Premiumを解放してください。",
   "@diaryPreviewUsageLimitMessage": {
-    "description": "AI月間制限到達時のフォールバックダイアログ本文"
+    "description": "月間生成制限到達時のフォールバックダイアログ本文"
   },
   "diaryPreviewAppBarTitle": "日記プレビュー",
   "@diaryPreviewAppBarTitle": {
@@ -967,7 +986,7 @@
   "@diaryPreviewGeneratingDiaryTitle": {
     "description": "日記生成中に表示するタイトル"
   },
-  "diaryPreviewGeneratingDiaryDescription": "AIがあなたの写真を分析しています",
+  "diaryPreviewGeneratingDiaryDescription": "思い出を言葉にしています…",
   "@diaryPreviewGeneratingDiaryDescription": {
     "description": "日記生成中に表示する説明文"
   },
@@ -979,7 +998,7 @@
   "@diaryPreviewDiscardDialogTitle": {
     "description": "日記を破棄する際の確認ダイアログタイトル"
   },
-  "diaryPreviewDiscardDialogMessage": "AI生成回数は既に消費されています。",
+  "diaryPreviewDiscardDialogMessage": "日記作成回数は既に消費されています。",
   "@diaryPreviewDiscardDialogMessage": {
     "description": "日記破棄時の注意文"
   },
@@ -1346,20 +1365,20 @@
       }
     }
   },
-  "subscriptionUsageWarningRemaining": "AI生成の残り回数が{remaining}回です",
+  "subscriptionUsageWarningRemaining": "残りの日記が{remaining}件です",
   "@subscriptionUsageWarningRemaining": {
-    "description": "AI生成使用量が制限に近づいた時の警告メッセージ",
+    "description": "日記残数が制限に近づいた時の警告メッセージ",
     "placeholders": {
       "remaining": {
         "type": "int"
       }
     }
   },
-  "subscriptionUsageWarningLimitReached": "AI生成の制限に達しました",
+  "subscriptionUsageWarningLimitReached": "日記の上限に達しました",
   "@subscriptionUsageWarningLimitReached": {
-    "description": "AI生成制限に達した時の警告メッセージ"
+    "description": "日記の月間制限に達した時の警告メッセージ"
   },
-  "subscriptionUpgradeRecommendationLimit": "Premiumプランにアップグレードすると月間{limit}回まで利用できます",
+  "subscriptionUpgradeRecommendationLimit": "Premiumを解放すると月{limit}件の日記を作成できます",
   "@subscriptionUpgradeRecommendationLimit": {
     "description": "具体的な制限回数を示すアップグレード推奨メッセージ",
     "placeholders": {
@@ -1368,7 +1387,7 @@
       }
     }
   },
-  "subscriptionUpgradeRecommendationGeneral": "より多くAI生成を利用される場合はPremiumプランがおすすめです",
+  "subscriptionUpgradeRecommendationGeneral": "Premiumを解放するとより多くの日記と過去1年の写真が利用できます",
   "@subscriptionUpgradeRecommendationGeneral": {
     "description": "一般的なアップグレード推奨メッセージ"
   },
@@ -1489,12 +1508,62 @@
   "@promptContextInputHint": {
     "description": "状況テキスト入力のヒント"
   },
-  "promptContextInputHelper": "AIが写真の状況をより深く理解できます",
+  "promptContextInputHelper": "あなたの言葉が物語をより豊かにします",
   "@promptContextInputHelper": {
     "description": "状況テキスト入力のヘルパーテキスト"
   },
   "diaryDetailCopiedToClipboard": "日記をコピーしました",
   "@diaryDetailCopiedToClipboard": {
     "description": "日記コンテンツをクリップボードにコピーした際のスナックバーメッセージ"
+  },
+  "lockedPhotoDialogTitle": "過去1年を振り返ろう。",
+  "@lockedPhotoDialogTitle": {
+    "description": "ロック写真タップ時のアップグレードダイアログタイトル"
+  },
+  "lockedPhotoDialogMessage": "Premiumを解放すると過去1年の写真にアクセスし、日記を作成できます。",
+  "@lockedPhotoDialogMessage": {
+    "description": "ロック写真タップ時のアップグレードダイアログ本文"
+  },
+  "commonNotNow": "今はしない",
+  "@commonNotNow": {
+    "description": "後回しにするボタンの共通ラベル"
+  },
+  "premiumBulletPhotos": "過去1年分の写真",
+  "@premiumBulletPhotos": {
+    "description": "Premium箇条書き: 写真アクセス"
+  },
+  "premiumBulletStories": "月{limit}件の日記",
+  "@premiumBulletStories": {
+    "description": "Premium箇条書き: 日記制限",
+    "placeholders": {
+      "limit": {
+        "type": "int"
+      }
+    }
+  },
+  "premiumBulletStyles": "全ライティングスタイル",
+  "@premiumBulletStyles": {
+    "description": "Premium箇条書き: ライティングスタイル"
+  },
+  "settingsSubscriptionPhotosLabel": "利用可能な写真",
+  "@settingsSubscriptionPhotosLabel": {
+    "description": "設定画面の写真アクセス範囲ラベル"
+  },
+  "settingsSubscriptionStoriesLabel": "今月の日記",
+  "@settingsSubscriptionStoriesLabel": {
+    "description": "設定画面の月間日記数ラベル"
+  },
+  "subscriptionUpgradeRecommendationTimeAccess": "Premiumを解放すると過去1年の写真にアクセスし、月{limit}件の日記を作成できます。",
+  "@subscriptionUpgradeRecommendationTimeAccess": {
+    "description": "時間軸フォーカスのアップグレード推奨メッセージ",
+    "placeholders": {
+      "limit": {
+        "type": "int"
+      }
+    }
+  },
+  "timelineLockedGroupLabel": "Premiumで利用可能",
+  "@timelineLockedGroupLabel": {
+    "description": "ロック写真グループのタイムラインヘッダーに表示するラベル"
   }
 }
