fix: polish usage status dialog for UI consistency
- Rename plan display from "Free plan" to "Basic" / "ベーシック"
- Unify "Stories this month" label and "x / y" value format across dialog and settings screen
- Align photos and stories rows with left-aligned layout in dialog
- Add usageCount to dialog for real usage data display

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -715,10 +715,17 @@
       }
     }
   },
-  "currentPlanStoriesLabel": "This month: {limit} stories",
+  "currentPlanStoriesLabel": "Stories this month",
   "@currentPlanStoriesLabel": {
-    "description": "Shows the monthly story limit",
+    "description": "Label for the monthly story limit row"
+  },
+  "currentPlanStoriesValue": "{used} / {limit}",
+  "@currentPlanStoriesValue": {
+    "description": "Value showing the monthly story usage and limit",
     "placeholders": {
+      "used": {
+        "type": "int"
+      },
       "limit": {
         "type": "int"
       }
@@ -749,7 +756,7 @@
   "@usageStatusUsageLabel": {
     "description": "Label for the usage amount section"
   },
-  "usageStatusUsageValue": "{used} / {limit} stories",
+  "usageStatusUsageValue": "{used} / {limit}",
   "@usageStatusUsageValue": {
     "description": "Displays how many generations were used versus the limit",
     "placeholders": {
@@ -1120,7 +1127,7 @@
   "@onboardingProcessing": {
     "description": "Label shown while onboarding completion is processing"
   },
-  "planBasicSubtitle": "Free plan",
+  "planBasicSubtitle": "Basic",
   "@planBasicSubtitle": {
     "description": "Subtitle for the Basic plan"
   },
